# pick-101

./: .gitignore  README.md  calibrate_3d.py  calibrate_camera_intrinsics.py  calibrate_gripper_gap.py  calibrate_joint_mapping.py  calibrate_joints_real.py  calibrate_wrist_cam.py  calibration_viewer.py  collect_straddle_states.py  eval_cartesian.py  eval_cross.py  eval_projection.py  eval_vision.py  export_best_run.py  fit_calibration.py  fit_linear_layers.py  make_aruco_board.py  make_bordered_tags.py  make_cube_template.py  measure_gripper_geometry.py  pick_tuner.py  plot_calibration.py  plot_calibration_efficiency.py  plot_calibration_xy.py  plot_corrected_vs_true.py  plot_correction_errors.py  plot_jenga_calibration.py  plot_learning_curves.py  plot_x_calibration.py  pyproject.toml  rebuild_calibration.py  run_lerobot_client.py  run_real_ik.py  run_real_t1.py  snapshot_block.py  train_lift.py  train_lift_projection.py  train_lift_vision.py  visualize_irl_block.py  (+1 more)
calibration/: calibrate_board.py  calibrate_joints_real.py  camera_intrinsics.json  joint_calibration.json  pick_start_positions.json  wrist_cam_extrinsics.json
checks/: check_cube_shapes.py  check_cube_upright.py  check_gripper_geometry.py  check_jaw_box_fit.py  check_min_gripper_frac.py  check_simplified_robot.py
configs/state_based/: curriculum_stage1.yaml  curriculum_stage3.yaml  curriculum_stage4.yaml
configs/vision/: curriculum_stage1_projection.yaml  curriculum_stage1_vision.yaml  curriculum_stage3_projection.yaml  t0v2_zone.yaml  (+7 more)
lerobot-tagged/python/: pyproject.toml
lerobot-tagged/python/src/lerobot_tagged/: __init__.py  board.py  detection.py  mujoco_viz.py  recorder.py  tag.py
lerobot-tagged/python/src/lerobot_tagged/scenes/: minimal.xml
tags-and-borders/: bordered_aruco.py  make_aruco_board.py  make_aruco_tags.py  make_bordered_tags.py  make_jenga_tag.py
tests/: test_aruco_3d.py  test_aruco_homography.py  test_aruco_homography_3d.py  test_color_detection.py  test_cube_corner_projection.py  test_projection_policy.py  test_real_robot.py  test_wrist_cam.py
wrist_tests/: gen_test_images.py
(+52 files in other folders)
