[project]
name = "pick-101"
version = "0.1.0"
description = "Inverse Kinematics controller for SO-101 robot arm with vision-based calibration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.0.0",
    "gymnasium @ git+https://github.com/stepjam/Gymnasium.git@0.29.2",
    "opencv-python>=4.6.0",
    "numpy<2.0.0",
    "robobase",
    "reportlab>=4.4.10",
    "pillow>=11.3.0",
]

[tool.uv.sources]
robobase = { path = "external/robobase", editable = true }
