[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lerobot-tagged"
version = "0.1.0"
description = "ArUco board generation and tag-based robot arm localisation"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-contrib-python>=4.8",
    "reportlab>=4.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
mujoco = ["mujoco>=3.0"]
dev = ["pytest", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/therealadityashankar/lerobot-tagged"

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_tagged"]

[tool.ruff]
line-length = 100